unpackaged/main/default/objects/Compliance_Document_Record__c/Compliance_Document_Record__c.object-meta.xml
<CustomObject>
    <label>Compliance Document Record</label>
    <nameField>
        <displayFormat>CDR-{000000}</displayFormat>
        <label>Compliance Document Record  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Document Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>