unpackaged/main/default/objects/Compliance_Document_Record__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select which Account this record is for, if applicable.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Compliance Document Records</relationshipLabel>
    <relationshipName>Compliance_Document_Records</relationshipName>
    <type>Lookup</type>
</CustomField>