unpackaged/main/default/objects/Compliance_Document_Record__c/fields/Client_Reference__c.field-meta.xml
<CustomField>
    <fullName>Client_Reference__c</fullName>
    <label>Client Reference</label>
    <type>TextArea</type>
</CustomField>