unpackaged/main/default/objects/Compliance_Document_Record__c/fields/Created_by_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Name__c</fullName>
    <description>Select the name of who is creating the record.</description>
    <label>Created by Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amelia McDonald</fullName>
            </value>
            <value>
                <fullName>Bethany Eveleigh</fullName>
            </value>
            <value>
                <fullName>Conar Pearson</fullName>
            </value>
            <value>
                <fullName>Jody Kennard</fullName>
            </value>
            <value>
                <fullName>Joe Whitehouse</fullName>
            </value>
            <value>
                <fullName>Monika Meel</fullName>
            </value>
            <value>
                <fullName>Rebecca Brooker</fullName>
            </value>
            <value>
                <fullName>Sam Davies</fullName>
            </value>
            <value>
                <fullName>Seth Hanson</fullName>
            </value>
            <value>
                <fullName>Taylor Bray</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>