unpackaged/main/default/objects/Compliance_Document_Record__c/fields/Current_Note__c.field-meta.xml
<CustomField>
    <fullName>Current_Note__c</fullName>
    <label>Current Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>