unpackaged/main/default/objects/Compliance_Document_Record__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Liability</fullName>
            </value>
            <value>
                <fullName>Gas Safety Certificate</fullName>
            </value>
            <value>
                <fullName>No Gas Declaration</fullName>
            </value>
            <value>
                <fullName>Terms of Stay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>