unpackaged/main/default/objects/Compliance_Document_Record__c/fields/First_Requested__c.field-meta.xml
<CustomField>
    <fullName>First_Requested__c</fullName>
    <description>Enter the date and time you first requested the documents for this record.</description>
    <label>First Requested</label>
    <type>Date</type>
</CustomField>