unpackaged/main/default/objects/Compliance_Document_Record__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Compliance Document Records (Supplier Account)</relationshipLabel>
    <relationshipName>PA_Compliance_Document_Records</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>