unpackaged/main/default/objects/Compliance_Document_Record__c/fields/Situ_Reference__c.field-meta.xml
<CustomField>
    <fullName>Situ_Reference__c</fullName>
    <description>Enter the Situ reference related to this record.</description>
    <inlineHelpText>Enter the 9-character Situ reference related to this record. This should be in the format 1A2B-3C4D.</inlineHelpText>
    <label>Situ Reference</label>
    <length>9</length>
    <type>Text</type>
</CustomField>