unpackaged/main/default/objects/Compliance_Document_Record__c/fields/Supplier_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Accounts__c</fullName>
    <description>Select the Supplier Account this record is for.</description>
    <label>Supplier Accounts</label>
    <referenceTo>Supplier_Accounts__c</referenceTo>
    <relationshipLabel>Compliance Document Records</relationshipLabel>
    <relationshipName>Compliance_Document_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>