unpackaged/main/default/objects/Compliance_Document_Record__c/fields/Supplier_Buildings__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Buildings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the Supplier Building this record is for.</description>
    <label>Supplier Buildings</label>
    <referenceTo>Supplier_Buildings__c</referenceTo>
    <relationshipLabel>Compliance Document Records</relationshipLabel>
    <relationshipName>Compliance_Document_Records</relationshipName>
    <type>Lookup</type>
</CustomField>