unpackaged/main/default/objects/Compliance_Document_Record__c/fields/Upload_Reason__c.field-meta.xml
<CustomField>
    <fullName>Upload_Reason__c</fullName>
    <label>Upload Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance Options</fullName>
            </value>
            <value>
                <fullName>Response to Expiry Email</fullName>
            </value>
            <value>
                <fullName>Updating All Properties</fullName>
            </value>
            <value>
                <fullName>Urgent Booking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>