unpackaged/main/default/objects/Compliance_Document_Record__c/recordTypes/Request_Record.recordType-meta.xml
<RecordType>
    <fullName>Request_Record</fullName>
    <active>true</active>
    <label>Request Record</label>
</RecordType>