unpackaged/main/default/objects/Compliance_Document_Record__c/recordTypes/Upload_Record.recordType-meta.xml
<RecordType>
    <fullName>Upload_Record</fullName>
    <active>true</active>
    <label>Upload Record</label>
</RecordType>