unpackaged/main/default/objects/Compliance_Document_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Situ_Reference__c</columns>
    <columns>Supplier_Accounts__c</columns>
    <columns>Supplier_Buildings__c</columns>
    <columns>Account__c</columns>
    <columns>Document_Type__c</columns>
    <columns>First_Requested__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>