unpackaged/main/default/objects/Compliance_Document_Record__c/listViews/Request_Record.listView-meta.xml
<ListView>
    <fullName>Request_Record</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Compliance_Document_Record__c.Request_Record</value>
    </filters>
    <label>Request Record</label>
</ListView>