unpackaged/main/default/objects/Compliance_Document_Record__c/listViews/Upload_Records.listView-meta.xml
<ListView>
    <fullName>Upload_Records</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Compliance_Document_Record__c.Upload_Record</value>
    </filters>
    <label>Upload Records</label>
</ListView>